# mosaic

./: README.md  setup.cfg
mosaic/: __init__.py  core.py  types.py  utilities.py
scripts/: example.py
