[metadata]
name = mosaic
version = 0.1.0
description = Python library for efficient rectangular decomposition of binary images using the Generalized Delta-Method.
author = Thomas Hirtz
author_email = thomashirtz@pm.me
license = Apache License 2.0
license_file = LICENSE

[options]
install_requires =
    numpy
    matplotlib
    opencv-python
packages = find:
